Refactor Commands to match previous changes
And

Add tests for new classes